bug squashing

--- a/src/app/beast-view/beast-view.component.css
+++ b/src/app/beast-view/beast-view.component.css
@@ -360,6 +360,7 @@ mat-toolbar {
 
 .locational-id-shell {
     max-width: 25%;
+    min-width: 215px;
     margin-bottom: 15px;
     padding: 15px;
     border-right: 1px solid lightgrey;
